# traffic-accidents

./: .gitignore  README.md  RainfallacrossSingapore.json  TrafficFlow.json  adl.ipynb  chebnet.py  data_collection.ipynb  data_preprocessing.ipynb  gat.ipynb  gcn.py  gcn_hotspot_classifier_with_explainer.ipynb  gcn_on_TAP_dataset.ipynb  gcn_with_road_edges.ipynb  hotspot predictions with SG.ipynb  hotspots prediction with TAP all cities.ipynb  hotspots prediction with TAP.ipynb  load_dataset.py  node_features.ipynb  pyproject.toml  sage.ipynb  test.ipynb
Singapore/data/processed/: Googlemaps_accident_locations.csv  RoadTrafficAccidentCasualtiesMonthly.csv  node_features.csv  rainfall_data.csv
Singapore/models/: hotspot predictions with SG.ipynb
US/models/: hotspots prediction with TAP all cities.ipynb  hotspots prediction with TAP.ipynb
US/output/charlotte_nc/: hotspot_geojson.json  model.pth  outputs.pkl
US/output/dallas_tx/: hotspot_geojson.json  model.pth  outputs.pkl
US/output/houston_tx/: hotspot_geojson.json  model.pth  outputs.pkl
US/output/indianapolis_in/: hotspot_geojson.json  model.pth  outputs.pkl
US/output/jacksonville_fl/: hotspot_geojson.json  model.pth  outputs.pkl
US/output/los_angeles_ca/: hotspot_geojson.json  model.pth  outputs.pkl
US/output/new_york_ny/: hotspot_geojson.json  model.pth  outputs.pkl
US/output/oklahoma_city_ok/: model.pth  outputs.pkl
US/output/phoenix_az/: hotspot_geojson.json  model.pth  outputs.pkl
US/utils/: load_dataset.py
data/: gcn_node_features.csv  rainfall_node_features.csv
(+3 files in other folders)
